# salesforce-sl-mcp

./: .gitignore  Procfile  connectors and mcp servers.txt  requirements.txt
support-case-mcp/: OAUTH_GATEWAY_SETUP.md  data.py  inspect.sh  pyproject.toml  salesforce_client.py  server.py
